# automationResearch

./: .gitignore  BENCHMARK_REPORT.md  COMPREHENSIVE_PROTOCOL.md  CONFOUND_CASE_STUDY.md  EXPERIMENT_REPORT.md  FEASIBILITY_REPORT.md  METHODOLOGY_ANALYSIS.md  PREREGISTRATION.md  README.md  RESEARCH_REPORT.md  SIGNAL_RULER_VALIDATION.md  STUDY_NOTES.md  my_topic.json  my_topic.md  scaled_pool.json
papers/: deepseek_GENERATION_APPENDIX.md  gemini_GENERATION_APPENDIX.md  gpt4o_GENERATION_APPENDIX.md  gpt5.5_GENERATION_APPENDIX.md
patches/: AI-Scientist-v2.patch  README.md
selection/: FINAL_POOL_8H.md  MASTER_LEDGER.md  SELECTION_LOG.md  SHORTLIST_8H.md  final_shortlist.json  ledger.json  phase2_ideas.json  shortlist.json  shortlist_8h.json
tools/: anti_anchoring.py  audit_calibration.py  auto_paper.sh  confound_detector.py  critique_writeup.py  d1_confound_ablation.py  d1b_feature_vs_answer.py  d1c_dd_ablation.py  enhanced_pipeline.py  ensemble_review.py  evidence_distiller.py  fc_precheck.py  fix_aggregation.py  gen_gen_appendix.py  grounding_audit.py  hc_v3.sh  heavy_run.sh  honest_rewrite.py  inspect_seed_agg.py  measure_tokens.py  merge_selection.py  multi_strategy_writeup.py  pairwise_tournament.py  phase2_run.sh  pipeline_comparison.py  pqf_stage_gate.py  recurate_8h.py  reground_rewrite.py  rescue_writeup.py  run_p0_experiment.sh  select_ideas.py  setup_ai_scientist.sh  signal_ruler.py  sprint_run.sh  sprint_scoreboard.py  sprint_supervisor.py  (+2 more)
trust-verify-sdk/: demo.html  pyproject.toml
trust-verify-sdk/trust_verify/: __init__.py  cli.py  client.py
(+3 files in other folders)
