[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "trust-verify"
version = "0.1.0"
description = "SDK for AI research paper trust verification"
requires-python = ">=3.8"
license = "MIT"

[project.scripts]
trust-verify-check = "trust_verify.cli:main"
